added prompts needs to meet password parameters

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
+          <!-- Password placeholder -->
           <textarea
             readonly
-            id="password"
+            id="password" 
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
+          <!-- Password placeholder ends -->
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
